--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
             version "3.10.2"
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs 'src/main/cpp/Libraries/abis'
+        }
+    }
 }
 
 dependencies {
